Changelog
=========


1.10.1 (unreleased)
-------------------

- Only load ftw.activity 1.x representation if ftw.activity 1.x is installed.
  [mathias.leimgruber]

- Show a hint about the imminent file replacement in the dropzone overlay.
  [mbaechtold]

- Make sure object modified is fired on quickupload.
  [lknoepfel]

- Check for file type before dragging
  [Kevin Bieri]


1.10.0 (2014-12-16)
-------------------

- The file can be replaced with drag'n'drop (modern browsers only).
  [mbaechtold]


1.9.0 (2014-09-15)
------------------

- ftw.activity integration: dispaly preview image in activity stream.
  [jone]

- Use ftw.profilehook instead of custom import steps (setuphandlers).
  [jone]


1.8.2 (2014-08-07)
------------------

- When replacing the file, use the new filename given by the file.
  [lknoepfel]

- Catch OverflowError for unkown PSD formats.
  [jone]

- Don't journalize when our user has no id.
  [tschanzt]


1.8.1 (2014-02-10)
------------------

- Improve file download implementation by using a stream iterator and
  supporting range and if-modified-since requests.
  [buchi]

- Make download view use our file download implementation.
  [buchi]


1.8 (2013-12-23)
----------------

- Add editable filename functionality.
  The File-Schema is extended with a new StringField: originFilename.
  You can set a new filename without touching its extension.
  [elioschmutz]

- Use ftw.colorbox for ftw.file overlay.
  [tschanzt]

- Use PIL itself to detect images.
  [tschanzt]

- Remove percent signs from download URL to fix problems in combination with
  Apache mod_rewrite.
  [buchi]



1.7.4 (2013-11-28)
------------------

- Require ftw.upgrade >= 1.4.0 required by upgrade 1514.
  [jone]

- Add upgradestep to recalculate wrong contenttypes.
  [tschanzt]


1.7.3 (2013-11-04)
------------------

- Customize getIcon method. Search MimetypeRegistry before using iconmaps.
  [tschanzt]


1.7.2 (2013-10-16)
------------------

- Add French translations.