@@ -1,6 +1,5 @@
 <?xml version="1.0"?>
 <metadata>
-  <version>1516</version>
     <dependencies>
         <dependency>profile-ftw.calendarwidget:default</dependency>
         <dependency>profile-ftw.colorbox:default</dependency>
