@@ -1,0 +1,8 @@
+<?xml version="1.0"?>
+<object>
+ <resourcetypes>
+  <imageobjects purge="True">
+    <element value="File"/>
+  </imageobjects>
+ </resourcetypes>
+</object>
