@@ -5,6 +5,9 @@ Changelog
 1.10.1 (unreleased)
 -------------------
 
+- Integrate ftw.file images with TinyMCE.
+  [lknoepfel]
+
 - Only load ftw.activity 1.x representation if ftw.activity 1.x is installed.
   [mathias.leimgruber]
 
